--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://root:Be9zzN4MOj6XaQ6ExRTM@containers-us-west-72.railway.app:6523/railway
-spring.datasource.username=root
-spring.datasource.password=Be9zzN4MOj6XaQ6ExRTM
+spring.datasource.url=jdbc:mysql://uip2ye85xithvrcr:nyVDYrPG5lmVKJfGDMVC@bvxene0csg7wnycjvxs1-mysql.services.clever-cloud.com:3306/bvxene0csg7wnycjvxs1
+spring.datasource.username=uip2ye85xithvrcr
+spring.datasource.password=nyVDYrPG5lmVKJfGDMVC
 
 
 #jwt
